crates/swc_ecma_parser/tests/test262-error-references/fail/8dc7370bc6dec92b.js.stderr
error: Unexpected token `;`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/8dc7370bc6dec92b.js:1:6
  |
1 | throw;
  |      ^

